# AndroidStudioLearner909

BuyGud/: settings.gradle.kts
BuyGud/app/: build.gradle.kts  google-services.json
CalculatorApp/app/: build.gradle.kts
CalculatorApp/gradle/: libs.versions.toml
CameraCapture/app/: build.gradle.kts
CameraCaptureApp/: settings.gradle.kts
CameraCaptureApp/app/: build.gradle.kts
Clicker/app/: build.gradle.kts
HelloWorldApp/app/: build.gradle.kts
HelloWorldApp/gradle/: libs.versions.toml
LoginApp/app/: build.gradle.kts
MobilTelesco/app/: build.gradle.kts
MobileTelesco/: settings.gradle.kts
MobileTelesco/app/: build.gradle.kts
MyApplication2/app/: build.gradle.kts
QuotesApp/app/: build.gradle.kts
Rickroll/: settings.gradle.kts
Rickroll/app/: build.gradle.kts
Starpointer/: settings.gradle.kts
Starpointer/app/: build.gradle.kts
Starpointer/app/src/main/jni/: CMakeLists.txt
Starpointer/app/src/main/jni/ncnn-20250503-android-shared/riscv64/include/ncnn/: platform.h
Starpointer/gradle/: libs.versions.toml
ThemePersistenceApp/: settings.gradle.kts
ThemePersistenceApp/app/: build.gradle.kts
androidexperiments/: build.gradle.kts  settings.gradle.kts
androidexperiments/app/: build.gradle.kts
androidexperiments/gradle/: libs.versions.toml
audiorecorder/app/: build.gradle.kts
bluetoothchat/: settings.gradle.kts
bluetoothchat/app/: build.gradle.kts
bluetoothscanner/: settings.gradle.kts
bluetoothscanner/app/: build.gradle.kts
capture/: settings.gradle.kts
capture/app/: build.gradle.kts
capture/gradle/: libs.versions.toml
d/: settings.gradle.kts
d/app/: build.gradle.kts
fin/: settings.gradle.kts
fin/app/: build.gradle.kts
multimediaapp/: settings.gradle.kts
multimediaapp/app/: build.gradle.kts
newtry/: settings.gradle.kts
sdf/: settings.gradle.kts
smsforwarder/: settings.gradle.kts
snap/: settings.gradle.kts
snapper/: settings.gradle.kts
wifiscanner/: settings.gradle.kts
(+235 files in other folders)
